# hera

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  coffee-prd.md  example.py  hbar-coffee-shop-prd.docx  pyproject.toml  railway.toml
agent/: coffee_agent.py  prompts.py  tools.py
config/: menu.py  settings.py
frontend/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  Confetti.tsx  config.ts  sounds.ts  vite-env.d.ts
scripts/: derive_key.py  setup_node.sh
static/: index.html
static/assets/: ExchangeController-BSMFMxYM.js  ExchangeController-Dha0s-m6.js  HelpersUtil-CtuLbycJ.js  HelpersUtil-DNK5IVdA.js  SwapController-B9bqlDDn.js  SwapController-BBUUGNvA.js  browser-BKVVQTxM.js  browser-Dy7l44Ck.js  data-capture-AeTI_HDl.js  data-capture-hM1ZtF5y.js  dist-C2RUQhUA.js  dist-UxC_s1Gp.js  email-Cwx8J4kQ.js  email-G1r9SysN.js  embedded-wallet-97cn_UpA.js  embedded-wallet-DVYfAasU.js  exports-Ck7Mr5BN.js  exports-DNvL5Hfp.js  exports-d_NbjAXn.js  exports-yRRKPuKC.js  features-QuL9E66A.js  features-syr1OxES.js  if-defined-D-H_in_I.js  if-defined-Dzc7La58.js  index-BD9SspUP.css  index-Cdl4-Kii.css  onramp-CxWcz7rb.js  onramp-Cy1xPVAp.js  (+80 more)
tests/: README.md  __init__.py  conftest.py  conftest.py-patch  hedera_localnet.py  locustfile.py  performance_metrics.py  primitive_ledger.py  test_agent.py  test_app.py  test_localnet_integration.py  test_performance.py  test_stress_chaos.py  test_stress_concurrent.py  test_summary.py  test_tools.py  virtual_wallet.py
