[project]
name = "coffee-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hedera-agent-kit>=3.4.2",
    "hedera-sdk-py>=2.50.0",
    "hiero-sdk-python>=0.2.0",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
]
